# bulkpay

./: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  package-lock.json  package.json  vercel.json
.github/workflows/: keepalive.yml
programs/bulk_pay/: Cargo.toml
programs/bulk_pay/src/: errors.rs  lib.rs
programs/bulk_pay/src/instructions/: bulk_transfer.rs  create_schedule.rs  delegate.rs  execute_schedule.rs  init_transfer_log.rs  mod.rs  revoke_delegation.rs
programs/bulk_pay/src/state/: mod.rs  recipient.rs  schedule_state.rs  transfer_record.rs  user_account.rs
shared/idl/: bulk_pay.json
shared/types/: bulk_pay.ts
shared/types/idl/: bulk_pay.json
tests/: create_account.test.ts  init_transfer_log.test.ts
tests/bulk_transfer/: atomicity.test.ts  happy_path.test.ts
tests/helpers/: accounts.ts  setup.ts  tokens.ts
