[workspace]
resolver = "2"
members  = [
    "packages/backend",
]

# Backend-only dependencies
[workspace.dependencies]
solana-sdk    = { version = "2.1.0" }
solana-client = { version = "2.1.0" }
tokio         = { version = "1",   features = ["full"] }
axum          = { version = "0.7" }
sqlx          = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
serde         = { version = "1",   features = ["derive"] }
serde_json    = { version = "1" }
ed25519-dalek = { version = "2" }
uuid          = { version = "1",   features = ["v4", "serde"] }
chrono        = { version = "0.4", features = ["serde"] }
anyhow        = { version = "1" }
thiserror     = { version = "2" }
jsonwebtoken  = { version = "9" }
dotenvy       = { version = "0.15" }
utoipa        = { version = "4",   features = ["axum_extras"] }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
