[workspace]
resolver = "2"
members = [
    "packages/backend",
    "packages/program/programs/bulk_pay",
]

[workspace.dependencies]
# ── Anchor / Solana program ───────────────────────────────
anchor-lang   = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl    = { version = "0.31.1", features = ["token", "associated_token"] }
spl-associated-token-account = { version = "6.0.0" }

# ── Solana client (backend only) ─────────────────────────
solana-sdk    = { version = "2.1.0" }
solana-client = { version = "2.1.0" }
spl-token = {version = "4"}

# ── Async / web ───────────────────────────────────────────
tokio         = { version = "1", features = ["full"] }
axum          = { version = "0.7" }

# ── Database ──────────────────────────────────────────────
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }

# ── Serde ─────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# ── Auth / crypto ─────────────────────────────────────────
ed25519-dalek = { version = "2" }
jsonwebtoken  = { version = "9" }

# ── Utilities ─────────────────────────────────────────────
uuid      = { version = "1", features = ["v4", "serde"] }
chrono    = { version = "0.4", features = ["serde"] }
anyhow    = { version = "1" }
thiserror = { version = "2" }
dotenvy   = { version = "0.15" }
utoipa    = { version = "4", features = ["axum_extras"] }
rand = { version = "0.8" }
bs58 = { version = "0.5" }
hex = { version = "0.4" }



# ── Tracing ───────────────────────────────────────────────
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
