[package]
name = "bulk_pay"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bulk_pay"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed", "idl-build"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token", "idl-build"] }

[lints.rust]
unexpected_cfgs = { level = "allow" }
deprecated = "allow"

